--- a/waybar/colors.css
+++ b/waybar/colors.css
@@ -1,101 +1,101 @@
 
-    @define-color background #101418;
+    @define-color background #0f1512;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #2e3135;
+    @define-color inverse_on_surface #2c322f;
 
-    @define-color inverse_primary #34618e;
+    @define-color inverse_primary #196b52;
 
-    @define-color inverse_surface #e1e2e8;
+    @define-color inverse_surface #dee4df;
 
-    @define-color on_background #e1e2e8;
+    @define-color on_background #dee4df;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #003257;
+    @define-color on_primary #003829;
 
-    @define-color on_primary_container #d1e4ff;
+    @define-color on_primary_container #a5f2d3;
 
-    @define-color on_primary_fixed #001d35;
+    @define-color on_primary_fixed #002117;
 
-    @define-color on_primary_fixed_variant #174974;
+    @define-color on_primary_fixed_variant #00513d;
 
-    @define-color on_secondary #253140;
+    @define-color on_secondary #1e352c;
 
-    @define-color on_secondary_container #d6e4f7;
+    @define-color on_secondary_container #cee9db;
 
-    @define-color on_secondary_fixed #0f1c2b;
+    @define-color on_secondary_fixed #082018;
 
-    @define-color on_secondary_fixed_variant #3b4858;
+    @define-color on_secondary_fixed_variant #354c42;
 
-    @define-color on_surface #e1e2e8;
+    @define-color on_surface #dee4df;
 
-    @define-color on_surface_variant #c3c7cf;
+    @define-color on_surface_variant #bfc9c3;
 
-    @define-color on_tertiary #3a2948;
+    @define-color on_tertiary #0a3445;
 
-    @define-color on_tertiary_container #f1daff;
+    @define-color on_tertiary_container #c2e8fd;
 
-    @define-color on_tertiary_fixed #241432;
+    @define-color on_tertiary_fixed #001e2b;
 
-    @define-color on_tertiary_fixed_variant #524060;
+    @define-color on_tertiary_fixed_variant #264b5c;
 
-    @define-color outline #8c9199;
+    @define-color outline #89938d;
 
-    @define-color outline_variant #42474e;
+    @define-color outline_variant #404944;
 
-    @define-color primary #9fcafc;
+    @define-color primary #8ad6b8;
 
-    @define-color primary_container #174974;
+    @define-color primary_container #00513d;
 
-    @define-color primary_fixed #d1e4ff;
+    @define-color primary_fixed #a5f2d3;
 
-    @define-color primary_fixed_dim #9fcafc;
+    @define-color primary_fixed_dim #8ad6b8;
 
     @define-color scrim #000000;
 
-    @define-color secondary #bac8db;
+    @define-color secondary #b3ccc0;
 
-    @define-color secondary_container #3b4858;
+    @define-color secondary_container #354c42;
 
-    @define-color secondary_fixed #d6e4f7;
+    @define-color secondary_fixed #cee9db;
 
-    @define-color secondary_fixed_dim #bac8db;
+    @define-color secondary_fixed_dim #b3ccc0;
 
     @define-color shadow #000000;
 
-    @define-color source_color #698bb2;
+    @define-color source_color #309b7a;
 
-    @define-color surface #101418;
+    @define-color surface #0f1512;
 
-    @define-color surface_bright #36393e;
+    @define-color surface_bright #343b37;
 
-    @define-color surface_container #1d2024;
+    @define-color surface_container #1b211e;
 
-    @define-color surface_container_high #272a2f;
+    @define-color surface_container_high #252b28;
 
-    @define-color surface_container_highest #32353a;
+    @define-color surface_container_highest #303633;
 
-    @define-color surface_container_low #191c20;
+    @define-color surface_container_low #171d1a;
 
-    @define-color surface_container_lowest #0b0e13;
+    @define-color surface_container_lowest #0a0f0d;
 
-    @define-color surface_dim #101418;
+    @define-color surface_dim #0f1512;
 
-    @define-color surface_tint #9fcafc;
+    @define-color surface_tint #8ad6b8;
 
-    @define-color surface_variant #42474e;
+    @define-color surface_variant #404944;
 
-    @define-color tertiary #d6bee5;
+    @define-color tertiary #a7cce0;
 
-    @define-color tertiary_container #524060;
+    @define-color tertiary_container #264b5c;
 
-    @define-color tertiary_fixed #f1daff;
+    @define-color tertiary_fixed #c2e8fd;
 
-    @define-color tertiary_fixed_dim #d6bee5;
+    @define-color tertiary_fixed_dim #a7cce0;
 
