--- a/waybar/colors.css
+++ b/waybar/colors.css
@@ -1,101 +1,101 @@
 
-    @define-color background #0f1512;
+    @define-color background #101418;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #2c322f;
+    @define-color inverse_on_surface #2d3135;
 
-    @define-color inverse_primary #196b52;
+    @define-color inverse_primary #2d638b;
 
-    @define-color inverse_surface #dee4df;
+    @define-color inverse_surface #e0e2e8;
 
-    @define-color on_background #dee4df;
+    @define-color on_background #e0e2e8;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #003829;
+    @define-color on_primary #003351;
 
-    @define-color on_primary_container #a5f2d3;
+    @define-color on_primary_container #cde5ff;
 
-    @define-color on_primary_fixed #002117;
+    @define-color on_primary_fixed #001d32;
 
-    @define-color on_primary_fixed_variant #00513d;
+    @define-color on_primary_fixed_variant #094b72;
 
-    @define-color on_secondary #1e352c;
+    @define-color on_secondary #23323f;
 
-    @define-color on_secondary_container #cee9db;
+    @define-color on_secondary_container #d4e4f6;
 
-    @define-color on_secondary_fixed #082018;
+    @define-color on_secondary_fixed #0d1d2a;
 
-    @define-color on_secondary_fixed_variant #354c42;
+    @define-color on_secondary_fixed_variant #394857;
 
-    @define-color on_surface #dee4df;
+    @define-color on_surface #e0e2e8;
 
-    @define-color on_surface_variant #bfc9c3;
+    @define-color on_surface_variant #c2c7ce;
 
-    @define-color on_tertiary #0a3445;
+    @define-color on_tertiary #382a4a;
 
-    @define-color on_tertiary_container #c2e8fd;
+    @define-color on_tertiary_container #eddcff;
 
-    @define-color on_tertiary_fixed #001e2b;
+    @define-color on_tertiary_fixed #221533;
 
-    @define-color on_tertiary_fixed_variant #264b5c;
+    @define-color on_tertiary_fixed_variant #4f4061;
 
-    @define-color outline #89938d;
+    @define-color outline #8c9198;
 
-    @define-color outline_variant #404944;
+    @define-color outline_variant #42474e;
 
-    @define-color primary #8ad6b8;
+    @define-color primary #99ccfa;
 
-    @define-color primary_container #00513d;
+    @define-color primary_container #094b72;
 
-    @define-color primary_fixed #a5f2d3;
+    @define-color primary_fixed #cde5ff;
 
-    @define-color primary_fixed_dim #8ad6b8;
+    @define-color primary_fixed_dim #99ccfa;
 
     @define-color scrim #000000;
 
-    @define-color secondary #b3ccc0;
+    @define-color secondary #b8c8da;
 
-    @define-color secondary_container #354c42;
+    @define-color secondary_container #394857;
 
-    @define-color secondary_fixed #cee9db;
+    @define-color secondary_fixed #d4e4f6;
 
-    @define-color secondary_fixed_dim #b3ccc0;
+    @define-color secondary_fixed_dim #b8c8da;
 
     @define-color shadow #000000;
 
-    @define-color source_color #309b7a;
+    @define-color source_color #406788;
 
-    @define-color surface #0f1512;
+    @define-color surface #101418;
 
-    @define-color surface_bright #343b37;
+    @define-color surface_bright #36393e;
 
-    @define-color surface_container #1b211e;
+    @define-color surface_container #1c2024;
 
-    @define-color surface_container_high #252b28;
+    @define-color surface_container_high #272a2e;
 
-    @define-color surface_container_highest #303633;
+    @define-color surface_container_highest #313539;
 
-    @define-color surface_container_low #171d1a;
+    @define-color surface_container_low #181c20;
 
-    @define-color surface_container_lowest #0a0f0d;
+    @define-color surface_container_lowest #0b0f12;
 
-    @define-color surface_dim #0f1512;
+    @define-color surface_dim #101418;
 
-    @define-color surface_tint #8ad6b8;
+    @define-color surface_tint #99ccfa;
 
-    @define-color surface_variant #404944;
+    @define-color surface_variant #42474e;
 
-    @define-color tertiary #a7cce0;
+    @define-color tertiary #d2bfe7;
 
-    @define-color tertiary_container #264b5c;
+    @define-color tertiary_container #4f4061;
 
-    @define-color tertiary_fixed #c2e8fd;
+    @define-color tertiary_fixed #eddcff;
 
-    @define-color tertiary_fixed_dim #a7cce0;
+    @define-color tertiary_fixed_dim #d2bfe7;
 
