--- a/waybar/colors.css
+++ b/waybar/colors.css
@@ -1,101 +1,101 @@
 
-    @define-color background #101418;
+    @define-color background #111418;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #2d3135;
+    @define-color inverse_on_surface #2e3135;
 
-    @define-color inverse_primary #2d638b;
+    @define-color inverse_primary #35618e;
 
-    @define-color inverse_surface #e0e2e8;
+    @define-color inverse_surface #e1e2e8;
 
-    @define-color on_background #e0e2e8;
+    @define-color on_background #e1e2e8;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #003351;
+    @define-color on_primary #003258;
 
-    @define-color on_primary_container #cde5ff;
+    @define-color on_primary_container #d1e4ff;
 
-    @define-color on_primary_fixed #001d32;
+    @define-color on_primary_fixed #001d36;
 
-    @define-color on_primary_fixed_variant #094b72;
+    @define-color on_primary_fixed_variant #194975;
 
-    @define-color on_secondary #23323f;
+    @define-color on_secondary #253140;
 
-    @define-color on_secondary_container #d4e4f6;
+    @define-color on_secondary_container #d6e3f7;
 
-    @define-color on_secondary_fixed #0d1d2a;
+    @define-color on_secondary_fixed #101c2b;
 
-    @define-color on_secondary_fixed_variant #394857;
+    @define-color on_secondary_fixed_variant #3b4858;
 
-    @define-color on_surface #e0e2e8;
+    @define-color on_surface #e1e2e8;
 
-    @define-color on_surface_variant #c2c7ce;
+    @define-color on_surface_variant #c3c7cf;
 
-    @define-color on_tertiary #382a4a;
+    @define-color on_tertiary #3b2948;
 
-    @define-color on_tertiary_container #eddcff;
+    @define-color on_tertiary_container #f2daff;
 
-    @define-color on_tertiary_fixed #221533;
+    @define-color on_tertiary_fixed #251432;
 
-    @define-color on_tertiary_fixed_variant #4f4061;
+    @define-color on_tertiary_fixed_variant #523f5f;
 
-    @define-color outline #8c9198;
+    @define-color outline #8d9199;
 
     @define-color outline_variant #42474e;
 
-    @define-color primary #99ccfa;
+    @define-color primary #a0cafd;
 
-    @define-color primary_container #094b72;
+    @define-color primary_container #194975;
 
-    @define-color primary_fixed #cde5ff;
+    @define-color primary_fixed #d1e4ff;
 
-    @define-color primary_fixed_dim #99ccfa;
+    @define-color primary_fixed_dim #a0cafd;
 
     @define-color scrim #000000;
 
-    @define-color secondary #b8c8da;
+    @define-color secondary #bbc7db;
 
-    @define-color secondary_container #394857;
+    @define-color secondary_container #3b4858;
 
-    @define-color secondary_fixed #d4e4f6;
+    @define-color secondary_fixed #d6e3f7;
 
-    @define-color secondary_fixed_dim #b8c8da;
+    @define-color secondary_fixed_dim #bbc7db;
 
     @define-color shadow #000000;
 
-    @define-color source_color #406788;
+    @define-color source_color #79afec;
 
-    @define-color surface #101418;
+    @define-color surface #111418;
 
     @define-color surface_bright #36393e;
 
-    @define-color surface_container #1c2024;
+    @define-color surface_container #1d2024;
 
-    @define-color surface_container_high #272a2e;
+    @define-color surface_container_high #272a2f;
 
-    @define-color surface_container_highest #313539;
+    @define-color surface_container_highest #32353a;
 
-    @define-color surface_container_low #181c20;
+    @define-color surface_container_low #191c20;
 
-    @define-color surface_container_lowest #0b0f12;
+    @define-color surface_container_lowest #0b0e13;
 
-    @define-color surface_dim #101418;
+    @define-color surface_dim #111418;
 
-    @define-color surface_tint #99ccfa;
+    @define-color surface_tint #a0cafd;
 
     @define-color surface_variant #42474e;
 
-    @define-color tertiary #d2bfe7;
+    @define-color tertiary #d6bee4;
 
-    @define-color tertiary_container #4f4061;
+    @define-color tertiary_container #523f5f;
 
-    @define-color tertiary_fixed #eddcff;
+    @define-color tertiary_fixed #f2daff;
 
-    @define-color tertiary_fixed_dim #d2bfe7;
+    @define-color tertiary_fixed_dim #d6bee4;
 
