--- a/waybar/colors.css
+++ b/waybar/colors.css
@@ -1,101 +1,101 @@
 
-    @define-color background #111418;
+    @define-color background #18130b;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #2e3135;
+    @define-color inverse_on_surface #362f27;
 
-    @define-color inverse_primary #35618e;
+    @define-color inverse_primary #7e570f;
 
-    @define-color inverse_surface #e1e2e8;
+    @define-color inverse_surface #ede1d4;
 
-    @define-color on_background #e1e2e8;
+    @define-color on_background #ede1d4;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #003258;
+    @define-color on_primary #442b00;
 
-    @define-color on_primary_container #d1e4ff;
+    @define-color on_primary_container #ffddb1;
 
-    @define-color on_primary_fixed #001d36;
+    @define-color on_primary_fixed #291800;
 
-    @define-color on_primary_fixed_variant #194975;
+    @define-color on_primary_fixed_variant #614000;
 
-    @define-color on_secondary #253140;
+    @define-color on_secondary #3d2e16;
 
-    @define-color on_secondary_container #d6e3f7;
+    @define-color on_secondary_container #fadebc;
 
-    @define-color on_secondary_fixed #101c2b;
+    @define-color on_secondary_fixed #271904;
 
-    @define-color on_secondary_fixed_variant #3b4858;
+    @define-color on_secondary_fixed_variant #56442a;
 
-    @define-color on_surface #e1e2e8;
+    @define-color on_surface #ede1d4;
 
-    @define-color on_surface_variant #c3c7cf;
+    @define-color on_surface_variant #d3c4b4;
 
-    @define-color on_tertiary #3b2948;
+    @define-color on_tertiary #233516;
 
-    @define-color on_tertiary_container #f2daff;
+    @define-color on_tertiary_container #d3eabd;
 
-    @define-color on_tertiary_fixed #251432;
+    @define-color on_tertiary_fixed #0f2004;
 
-    @define-color on_tertiary_fixed_variant #523f5f;
+    @define-color on_tertiary_fixed_variant #394c2b;
 
-    @define-color outline #8d9199;
+    @define-color outline #9b8f80;
 
-    @define-color outline_variant #42474e;
+    @define-color outline_variant #4f4539;
 
-    @define-color primary #a0cafd;
+    @define-color primary #f3bd6e;
 
-    @define-color primary_container #194975;
+    @define-color primary_container #614000;
 
-    @define-color primary_fixed #d1e4ff;
+    @define-color primary_fixed #ffddb1;
 
-    @define-color primary_fixed_dim #a0cafd;
+    @define-color primary_fixed_dim #f3bd6e;
 
     @define-color scrim #000000;
 
-    @define-color secondary #bbc7db;
+    @define-color secondary #dcc3a1;
 
-    @define-color secondary_container #3b4858;
+    @define-color secondary_container #56442a;
 
-    @define-color secondary_fixed #d6e3f7;
+    @define-color secondary_fixed #fadebc;
 
-    @define-color secondary_fixed_dim #bbc7db;
+    @define-color secondary_fixed_dim #dcc3a1;
 
     @define-color shadow #000000;
 
-    @define-color source_color #79afec;
+    @define-color source_color #9b8b77;
 
-    @define-color surface #111418;
+    @define-color surface #18130b;
 
-    @define-color surface_bright #36393e;
+    @define-color surface_bright #3f382f;
 
-    @define-color surface_container #1d2024;
+    @define-color surface_container #251f17;
 
-    @define-color surface_container_high #272a2f;
+    @define-color surface_container_high #2f2921;
 
-    @define-color surface_container_highest #32353a;
+    @define-color surface_container_highest #3a342b;
 
-    @define-color surface_container_low #191c20;
+    @define-color surface_container_low #201b13;
 
-    @define-color surface_container_lowest #0b0e13;
+    @define-color surface_container_lowest #120d07;
 
-    @define-color surface_dim #111418;
+    @define-color surface_dim #18130b;
 
-    @define-color surface_tint #a0cafd;
+    @define-color surface_tint #f3bd6e;
 
-    @define-color surface_variant #42474e;
+    @define-color surface_variant #4f4539;
 
-    @define-color tertiary #d6bee4;
+    @define-color tertiary #b7cea2;
 
-    @define-color tertiary_container #523f5f;
+    @define-color tertiary_container #394c2b;
 
-    @define-color tertiary_fixed #f2daff;
+    @define-color tertiary_fixed #d3eabd;
 
-    @define-color tertiary_fixed_dim #d6bee4;
+    @define-color tertiary_fixed_dim #b7cea2;
 
