--- a/waybar/colors.css
+++ b/waybar/colors.css
@@ -1,101 +1,101 @@
 
-    @define-color background #18130b;
+    @define-color background #0f1512;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #362f27;
+    @define-color inverse_on_surface #2c322f;
 
-    @define-color inverse_primary #7e570f;
+    @define-color inverse_primary #196b52;
 
-    @define-color inverse_surface #ede1d4;
+    @define-color inverse_surface #dee4df;
 
-    @define-color on_background #ede1d4;
+    @define-color on_background #dee4df;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #442b00;
+    @define-color on_primary #003829;
 
-    @define-color on_primary_container #ffddb1;
+    @define-color on_primary_container #a5f2d3;
 
-    @define-color on_primary_fixed #291800;
+    @define-color on_primary_fixed #002116;
 
-    @define-color on_primary_fixed_variant #614000;
+    @define-color on_primary_fixed_variant #00513c;
 
-    @define-color on_secondary #3d2e16;
+    @define-color on_secondary #1e352c;
 
-    @define-color on_secondary_container #fadebc;
+    @define-color on_secondary_container #cee9db;
 
-    @define-color on_secondary_fixed #271904;
+    @define-color on_secondary_fixed #082018;
 
-    @define-color on_secondary_fixed_variant #56442a;
+    @define-color on_secondary_fixed_variant #354c42;
 
-    @define-color on_surface #ede1d4;
+    @define-color on_surface #dee4df;
 
-    @define-color on_surface_variant #d3c4b4;
+    @define-color on_surface_variant #bfc9c2;
 
-    @define-color on_tertiary #233516;
+    @define-color on_tertiary #0a3445;
 
-    @define-color on_tertiary_container #d3eabd;
+    @define-color on_tertiary_container #c2e8fd;
 
-    @define-color on_tertiary_fixed #0f2004;
+    @define-color on_tertiary_fixed #001e2b;
 
-    @define-color on_tertiary_fixed_variant #394c2b;
+    @define-color on_tertiary_fixed_variant #264b5c;
 
-    @define-color outline #9b8f80;
+    @define-color outline #89938d;
 
-    @define-color outline_variant #4f4539;
+    @define-color outline_variant #404944;
 
-    @define-color primary #f3bd6e;
+    @define-color primary #8ad6b8;
 
-    @define-color primary_container #614000;
+    @define-color primary_container #00513c;
 
-    @define-color primary_fixed #ffddb1;
+    @define-color primary_fixed #a5f2d3;
 
-    @define-color primary_fixed_dim #f3bd6e;
+    @define-color primary_fixed_dim #8ad6b8;
 
     @define-color scrim #000000;
 
-    @define-color secondary #dcc3a1;
+    @define-color secondary #b3ccc0;
 
-    @define-color secondary_container #56442a;
+    @define-color secondary_container #354c42;
 
-    @define-color secondary_fixed #fadebc;
+    @define-color secondary_fixed #cee9db;
 
-    @define-color secondary_fixed_dim #dcc3a1;
+    @define-color secondary_fixed_dim #b3ccc0;
 
     @define-color shadow #000000;
 
-    @define-color source_color #9b8b77;
+    @define-color source_color #238366;
 
-    @define-color surface #18130b;
+    @define-color surface #0f1512;
 
-    @define-color surface_bright #3f382f;
+    @define-color surface_bright #343b37;
 
-    @define-color surface_container #251f17;
+    @define-color surface_container #1b211e;
 
-    @define-color surface_container_high #2f2921;
+    @define-color surface_container_high #252b28;
 
-    @define-color surface_container_highest #3a342b;
+    @define-color surface_container_highest #303633;
 
-    @define-color surface_container_low #201b13;
+    @define-color surface_container_low #171d1a;
 
-    @define-color surface_container_lowest #120d07;
+    @define-color surface_container_lowest #0a0f0d;
 
-    @define-color surface_dim #18130b;
+    @define-color surface_dim #0f1512;
 
-    @define-color surface_tint #f3bd6e;
+    @define-color surface_tint #8ad6b8;
 
-    @define-color surface_variant #4f4539;
+    @define-color surface_variant #404944;
 
-    @define-color tertiary #b7cea2;
+    @define-color tertiary #a7cce0;
 
-    @define-color tertiary_container #394c2b;
+    @define-color tertiary_container #264b5c;
 
-    @define-color tertiary_fixed #d3eabd;
+    @define-color tertiary_fixed #c2e8fd;
 
-    @define-color tertiary_fixed_dim #b7cea2;
+    @define-color tertiary_fixed_dim #a7cce0;
 
